<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg7"
    android:orientation="vertical" >

    <TextView
        android:drawableLeft="@drawable/top_back"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_title"
        android:textColor="@color/darkyellow"
        android:gravity="center_vertical"
        android:text="@string/title"
        android:textSize="15dp" />

    <EditText
        android:layout_marginTop="7dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:maxLines="1"
        android:gravity="center"
        android:layout_below="@+id/tv_title"
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/please_title"
        android:background="@drawable/layout_border"
        android:textColor="@color/dark_hese" >
    </EditText>

   

    <TextView
        android:id="@+id/tv_content"
        android:layout_below="@+id/et_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/darkyellow"
        android:gravity="center_vertical"
        android:text="@string/content"
        android:textSize="15dp" />

 	<EditText
 	    android:layout_weight="7"
 	    android:id="@+id/et_content"
 	    android:layout_below="@+id/tv_content"
 	    android:layout_width="match_parent"
 	    android:layout_height="match_parent"
 	    android:layout_marginLeft="20dp"
 	    android:layout_marginRight="20dp"
 	    android:layout_marginTop="7dp"
 	    android:layout_marginBottom="30dp"
 	    android:paddingLeft="3dp"
 	    android:paddingRight="3dp"
 	    android:gravity="left"
 	    android:paddingTop="3dp"
 	    android:paddingBottom="3dp"
 	    android:background="@drawable/layout_border"
 	    android:hint="@string/please_content"
 	    android:textColor="@color/darkGreen" />

 	    <Button
 	        android:id="@+id/btn_save"
 	        android:layout_width="50dp"
 	        android:layout_height="50dp"
 	        android:layout_alignParentBottom="true"
 	        android:layout_alignRight="@+id/et_content"
 	        android:layout_marginBottom="14dp"
 	        android:background="@drawable/save"
 	        android:textSize="20dp" />

</RelativeLayout>