<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:yoo="http://schemas.android.com/apk/res/com.mo.yoo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg5"
    android:orientation="vertical" >

    <com.mo.util.MyViewPager
        android:id="@+id/id_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </com.mo.util.MyViewPager>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/bg2"
        android:orientation="horizontal" >

        <com.mo.yoo.ChangeColor
            android:id="@+id/id_indicator_one"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            yoo:icon="@drawable/sup1"
           	yoo:text="@string/tab_knowledge"
            yoo:text_size="12sp" />
            
         

        <com.mo.yoo.ChangeColor
            android:id="@+id/id_indicator_two"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            yoo:icon="@drawable/sup2"
            yoo:text="@string/gps_location"
            yoo:text_size="12sp" />

        <com.mo.yoo.ChangeColor
            android:id="@+id/id_indicator_three"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            yoo:icon="@drawable/sup4"
            yoo:text="@string/tab_play"
            yoo:text_size="12sp"/>
    </LinearLayout>

</LinearLayout>