<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="3dp"
    android:paddingBottom="5dp"
    android:orientation="vertical" >
    
     <LinearLayout
        android:id="@+id/local_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_border"
        android:orientation="horizontal" >

    <ImageView 
        android:layout_weight="1"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:id="@+id/iv_icon"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:src="@drawable/music"/>
    <LinearLayout
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:layout_width="150dp"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <TextView 
            android:layout_weight="1"
            android:textSize="18sp"
            android:singleLine="true"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/musicName"
            android:textColor="@color/dark_hese"
            android:id="@+id/title"/>
         <TextView 
             android:textSize="15sp"
             android:text="@string/artist"
             android:layout_weight="1"
             android:singleLine="true"
             android:gravity="center_vertical"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textColor="@color/qingZi"
            android:id="@+id/artist"/>
    </LinearLayout>

   	<TextView 
             android:textSize="17sp"
             android:text="@string/time"
             android:layout_weight="1"
             android:singleLine="true"
             android:gravity="center"
             android:layout_width="20dp"
             android:layout_height="match_parent"
             android:textColor="@color/darkGreen"
             android:id="@+id/tv_time"/>
    </LinearLayout>

</LinearLayout>
