<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg5"
    android:orientation="vertical" >
   <LinearLayout 
        	android:layout_width="match_parent"
        	android:layout_height="46dp"
        	android:gravity="center"
        	android:background="@color/top_themeColor"
        	android:orientation="horizontal">
        <TextView
                android:layout_weight="5"
                android:paddingLeft="3dp"
                android:drawableLeft="@drawable/top_back"
                android:id="@+id/tv_back"
                android:textColor="@color/dark_hese"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/top_back"
                android:gravity="center" />
            <com.mo.view.MarqueTextView
                android:ellipsize="marquee"
                addStatesFromChildren="true"
                android:layout_weight="3"
                android:id="@+id/tv_blogTitle2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:singleLine="true"
                android:textSize="18sp"
                android:text="@string/top_news"
                android:gravity="center"
                android:textColor="#008000" />
            <TextView
                android:layout_weight="5"
                android:id="@+id/tv_Comments"
                android:drawableLeft="@drawable/top_nothing2"
                android:drawableRight="@drawable/top_nothing"
                
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#000000"
                android:gravity="center" />
    </LinearLayout>
	<ImageView
        android:id="@+id/id_iv_tabline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/tabline" />  
   
     <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="3dp"
	    android:layout_marginBottom="3dp">
	 <LinearLayout 
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:orientation="vertical"
    	android:paddingRight="7sp"
    	android:paddingBottom="7sp"
    	android:paddingLeft="7sp">
        <LinearLayout 
        	android:layout_weight="1"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:visibility="gone"
        	android:orientation="horizontal">
        <TextView 
            android:layout_weight="1"
           	android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/tv_name2"
            android:text="@string/blogger"/>
        <TextView 
            android:layout_weight="3"
           android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/tv_id_Blogs"
            android:gravity="center"
            android:visibility="invisible"
            android:text="ID"/>
        </LinearLayout>
    <LinearLayout 
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:paddingLeft="19sp"
        android:paddingRight="19sp"
        android:orientation="horizontal">
    <TextView 
            android:drawableLeft="@drawable/top_col"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@color/qingZi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tv_saved"
            android:text="@string/collection"/>
     <TextView 
         	android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/qingZi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text=""/>
	<TextView 
            android:drawableLeft="@drawable/comment"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@color/qingZi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tv_contentCount2"
            android:text="@string/comment"/>
	</LinearLayout>
    <WebView
        android:id="@+id/wv_Content2"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="12" >

    </WebView>
     
</LinearLayout>
</ScrollView>
</LinearLayout>
