<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="3dp"
    android:paddingBottom="5dp"
    android:orientation="vertical" >
    
     <LinearLayout
        android:id="@+id/local_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_border"
        android:orientation="horizontal" >

    <ImageView 
        android:layout_weight="1"
        android:layout_width="40dp"
        android:layout_height="52dp"
        android:id="@+id/iv_icon"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:src="@drawable/icon3"/>
    <LinearLayout
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:layout_width="150dp"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <TextView 
            android:drawableLeft="@drawable/music"
            android:layout_weight="1"
            android:textSize="16sp"
            android:singleLine="true"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/musicName"
            android:textColor="@color/dark_hese"
            android:id="@+id/title"/>
         <TextView 
             android:textSize="18sp"
             android:text="@string/artist"
             android:layout_weight="1"
             android:singleLine="true"
             android:gravity="center"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textColor="@color/qingZi"
            android:id="@+id/artist"/>
    </LinearLayout>

    <ImageView
        android:layout_weight="1"
        android:id="@+id/iv_show"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/top6" /> 
    </LinearLayout>

     <LinearLayout
         android:paddingTop="7sp"
         android:paddingBottom="7sp"
         android:id="@+id/local_fenxiang"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/layout_border"
         android:orientation="horizontal" >

         <TextView
             android:layout_marginLeft="25dp"
             android:id="@+id/fenxiang"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
             android:clickable="true"
             android:drawableLeft="@drawable/share"
             android:gravity="center_vertical"
             android:text="@string/share"
             android:textColor="@color/qingZi" />

         <TextView
             android:id="@+id/kongbai"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_weight="1" />

         <TextView
             android:layout_marginLeft="20dp"
             android:id="@+id/shanchu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
             android:clickable="true"
             android:drawableLeft="@drawable/delete"
             android:gravity="center_vertical"
             android:text="@string/delete"
             android:textColor="@color/qingZi" />
     </LinearLayout>

</LinearLayout>
